# academtranslator

./: .gitattributes  .gitignore  LICENSE.txt  README.MD  pyproject.toml
checkpoint/train-alma/: README.md  adapter_config.json  adapter_model.safetensors
data/: eval.xlsx  test.xlsx  test_gen.xlsx  train.xlsx
data/test/: data-00000-of-00001.arrow  dataset_info.json  state.json
data/train/: data-00000-of-00001.arrow  state.json
tranhack/: bot.py  compute_metrics.py  const.py  export_model.py  generate_answers.py  prepare_data.py  train_llm.py  util.py
